--- a/Selenium/.classpath
+++ b/Selenium/.classpath
@@ -26,5 +26,8 @@
 	<classpathentry kind="lib" path="F:/Selenium/jar_files/selenium-remote-driver-3.141.0.jar"/>
 	<classpathentry kind="lib" path="F:/Selenium/jar_files/selenium-safari-driver-3.141.0.jar"/>
 	<classpathentry kind="lib" path="F:/Selenium/jar_files/selenium-support-3.141.0.jar"/>
+	<classpathentry kind="lib" path="F:/Selenium/jar_files/logback.jar/logback.jar"/>
+	<classpathentry kind="lib" path="F:/Selenium/jar_files/logback.jar/slf4j.jar/slf4j.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
